@@ -1,3 +1,10 @@
+2010-07-24  Stas Boukarev  <stassats@gmail.com>
+
+	* slime-package-fu.el (slime-export-structure): New function,
+	export all constructors, accessors, etc.
+	* swank-package-fu.lisp (export-structure): Lisp side of the above
+	function, works only on SBCL for now.
+
 2010-07-23  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-arglists.lisp (arglist-dispatch): Export it, so it may be
